phase2_Dev/src/objects/ComponentProperty__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentName__c</fullName>
        <formula>Component__r.Name</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Component Properties</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The order that the property should be displayed.</description>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PropertyName__c</fullName>
        <formula>Property__r.DeveloperName__c</formula>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Component Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ComponentName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Extended</fullName>
        <columns>NAME</columns>
        <columns>Component__c</columns>
        <columns>ComponentName__c</columns>
        <columns>Property__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Extended</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0}</displayFormat>
        <label>Component Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>